# tardis-remastered

./: Dockerfile  LICENSE  README.md  asset-manifest.json  index.html  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: .env  325c5bfe16c6_adding_other_tables.py  6f0b98ce29d4_add_all_tables.py  94a49bb65ae1_testing_timezoe_only.py  9621947f983c_second_try.py  d822d488ed69_remove_users_to_test.py  ddd03902439b_initial_migration.py
backend/src/: .env  config.py  logger.py
backend/src/routes/: admin.py  user.py
backend/src/services/: tardis.py
backend/src/util/: db.py  models.py  schemas.py  utility.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AddSubtractDays.js  Footer.js  Navbar.js  TimeZoneSelector.js
frontend/src/styles/: DarkMode.css  Footer.css  Navbar.css  TimeZoneSelector.css
static/css/: main.f058de58.css  main.f058de58.css.map
static/js/: main.0dc1d7f4.js  main.0dc1d7f4.js.map  main.6cedb37d.js  main.6cedb37d.js.map
